[package]
name = "abs_buff"
version = "0.1.0"
edition = "2021"

authors = ["lino <lino_snsalias@outlook.com>"]
description = "ABStraction of BUFFered IO"
homepage = "https://github.com/ljsnogard/abs_buff"
keywords = ["IO", "buffer"]
categories = ["no-std"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
abs_sync = { version = "0.1" }
pin-project = { version = "1.1.*" }

[dev-dependencies]
log = { version = "0.4.*" }
