[package]
name = "abs_buff"
version = "0.1.1"
edition = "2021"

authors = ["lino <lino_snsalias@outlook.com>"]
description = "ABStraction of BUFFered IO"
homepage = "https://github.com/ljsnogard/abs_buff"
keywords = ["IO", "buffer"]
categories = ["no-std", "traits"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
abs_sync = { version = "0.1" }
